Set app as PWA and add emotes
Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -4,5 +4,9 @@
     "cordova": {}
   },
   "type": "angular",
-  "id": "af9933b7"
+  "id": "af9933b7",
+  "config": {
+    "ionic_www_dir": "platforms/browser/www",
+    "ionic_build_dir": "platforms/browser/www"
+  }
 }
