--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "AssosPNS",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Lucas OMS",
+  "homepage": "",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "deploy": "ionic cordova build browser --prod && firebase deploy",
+    "deploy": "ionic build --prod && firebase deploy",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -24,7 +24,9 @@
     "@angular/material": "^7.3.2",
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/pwa": "^0.13.8",
     "@angular/router": "^7.2.2",
+    "@angular/service-worker": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
